5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1590_1015.log
== TEST (2019-03-25 21:44:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))

print((min(var1, var2), (max(var1, var2))))
-- OUTPUT:
(-2, 10)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:44:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))

print((min(var1, var2), (max(var1, var2))))
-- EXECUTION TIME:
0.194752
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
(-2, 10)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:45:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))

print min(var1, var2), max(var, var2)
-- EXECUTION TIME:
0.209795
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 7
    print min(var1, var2), max(var, var2)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:45:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))

print min(var1, var2), max(var, var2)
-- EXECUTION TIME:
0.166571
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 7
    print min(var1, var2), max(var, var2)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:45:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))

print min(var1, var2), max(var, var2)
-- EXECUTION TIME:
0.113533
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 7
    print min(var1, var2), max(var, var2)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:45:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))

print min(var1, var2), max(var, var2)
-- EXECUTION TIME:
0.104316
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 7
    print min(var1, var2), max(var, var2)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:45:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))

print min(var1, var2), max(var, var2)
-- EXECUTION TIME:
0.209687
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 7
    print min(var1, var2), max(var, var2)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:45:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))

print(min(var1, var2), max(var, var2))
-- EXECUTION TIME:
0.145909
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 7, in <module>
    print(min(var1, var2), max(var, var2))
NameError: name 'var' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:49:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))
var3 = int(input("w"))

r1 = min(var1,var2,var3)
r2 = max(var1,var2,var3)
r3 = var1+var2+var2-r1-r2

print(r1, r2, r3)
-- EXECUTION TIME:
0.141068
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2 10 -2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:49:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))
var3 = int(input("w"))

r1 = min(var1,var2,var3)
r2 = max(var1,var2,var3)
r3 = var1+var2+var2-r1-r2

print(r1, r2, r3)
-- EXECUTION TIME:
0.167584
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2 10 -2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:49:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))
var3 = int(input("w"))

r1 = min(var1,var2,var3)
r2 = max(var1,var2,var3)
r3 = var1+var2+var2-r1-r2

print(r1, r3, r2)
-- OUTPUT:
-2 -2 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:50:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))
var3 = int(input("w"))

r1 = min(var1,var2,var3)
r2 = max(var1,var2,var3)
r3 = var1+var2+var3-r1-r2

print(r1, r3, r2)
-- OUTPUT:
-2 0 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:50:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))
var3 = int(input("w"))

r1 = min(var1,var2,var3)
r2 = max(var1,var2,var3)
r3 = var1+var2+var3-r1-r2

print(r1, r3, r2)
-- EXECUTION TIME:
0.135111
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2 0 10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:50:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input("x"))
var2 = int(input("y"))
var3 = int(input("w"))

r1 = min(var1,var2,var3)
r2 = max(var1,var2,var3)
r3 = var1+var2+var3-r1-r2

print(r1, r3, r2)
-- EXECUTION TIME:
0.138409
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2 0 10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
